k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-news
  namespace: kube-news
  labels:
    app: kube-news
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: LoadBalancer
  selector:
    app: kube-news
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
